<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00.00" />

    <TextView
        android:id="@+id/tv_intervalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/tv_currentTime"
        app:layout_constraintStart_toStartOf="@id/tv_currentTime"
        app:layout_constraintTop_toBottomOf="@id/tv_currentTime"
        tools:text="00:00.00" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_lapTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/tv_textLap"
        style="@style/lapTimeText"
        android:layout_marginStart="50dp"
        android:paddingStart="10dp"
        android:text="@string/textLap"
        app:layout_constraintBottom_toBottomOf="@id/gl_lapTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_lapTime" />

    <TextView
        android:id="@+id/tv_textIntervalRec"
        style="@style/lapTimeText"
        android:text="@string/textIntervalRec"
        app:layout_constraintBottom_toBottomOf="@id/gl_lapTime"
        app:layout_constraintEnd_toStartOf="@id/tv_textTotalTime"
        app:layout_constraintStart_toEndOf="@id/tv_textLap"
        app:layout_constraintTop_toTopOf="@id/gl_lapTime" />

    <TextView
        android:id="@+id/tv_textTotalTime"
        style="@style/lapTimeText"
        android:layout_marginEnd="50dp"
        android:paddingEnd="10dp"
        android:text="@string/textTotlaTime"
        app:layout_constraintBottom_toBottomOf="@id/gl_lapTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_lapTime" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/tv_textTotalTime"
        app:layout_constraintStart_toStartOf="@id/tv_textLap"
        app:layout_constraintTop_toBottomOf="@id/tv_textIntervalRec" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gl_record"
        app:layout_constraintEnd_toEndOf="@id/divider"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:id="@+id/layout_lapTimeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/btn_intervalRec"
        style="@style/button"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/gray"
        android:text="@string/textIntervalRec"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_reset"
        style="@style/button"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/gray"
        android:text="@string/textReset"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_start"
        style="@style/button"
        android:layout_marginEnd="50dp"
        android:text="@string/textStart"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_continue"
        style="@style/button"
        android:layout_marginEnd="50dp"
        android:text="@string/textContinue"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_stop"
        style="@style/button"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/red"
        android:text="@string/textStop"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_intervalTime,tv_textLap,tv_textIntervalRec,tv_textTotalTime,scrollView" />
</androidx.constraintlayout.widget.ConstraintLayout>